# discord_OverCRI

./: .gitignore  .pre-commit-config.yaml  CMD_MAP  Cargo.toml  Dockerfile  README.md  requirements.txt  run_docker
assets/: valheim.m4a
src/: cri.py  discord_utils.py  jaro.py  main.py  main.rs  utils.py
